add files after change

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <nav class="nav-page">
          <a class="logo" href="./index.html">Web<span class="logo-style">Studio</span></a>
          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-item-link" href="Contacts">Contacts</a></li>
-            <li class="nav-item"><a class="nav-item-link" href="Portfolio">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-item-link" href="Studio">Studio</a></li>
+            <li class="nav-item"><a class="nav-item-link" href="./index.html">Studio</a></li>
+            <li class="nav-item"><a class="nav-item-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-item-link" href="">Contacts</a></li>
          </ul>
       </nav>
          <address class="head-addr">
@@ -98,8 +98,8 @@
                <p class="ourprtf-cardtext">Marketing</p>
             </li>
             <li class="ourprtf-item">
-               <img src="./images/img_7.jpg" width="360" height="300" alt="Meditaion App" />
-               <h3 class="ourprtf-cardname">Meditaion App</h3>
+               <img src="./images/img_7.jpg" width="360" height="300" alt="Meditation App" />
+               <h3 class="ourprtf-cardname">Meditation App</h3>
                <p class="ourprtf-cardtext">App</p>
             </li>
             <li class="ourprtf-item">
